fixing alignment issue with question text container

--- a/static/styles/question-example.css
+++ b/static/styles/question-example.css
@@ -9,6 +9,7 @@ main
     background-color: #F8F9FA;
     border: 2px solid #7749F8;
     position: relative;
+    margin-left: 0px;
 }
 
 .reply
